# Reputation-DAO

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  test_factoria_local.sh  test_secure_deposit.sh
frontend/: .env.example  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/@/components/: AnimatedContent.tsx
frontend/public/: robots.txt  sitemap.xml
frontend/public/docs/concepts/: bitcoin-backed-trust-economy.md  verifiable-trust-protocol.md
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DepositWarning.tsx  SecureDepositForm.tsx  VeraWidget.tsx
frontend/src/components/docs/: MarkdownRenderer.tsx
frontend/src/contexts/: AuthContext.tsx  RoleContext.tsx
src/common/: TreasuryTypes.mo
src/declarations/factoria/: factoria.did  factoria.did.js
src/declarations/ic_siwb_provider/: ic_siwb_provider.did
src/declarations/treasury/: treasury.did
src/factoria/: child_wasm.arg  main.mo
src/reputation_dao/: main.mo
src/siwb/ic_siwb/: Cargo.toml
src/siwb/ic_siwb_provider/: Cargo.toml  Makefile  README.md
src/siwb/ic_siwb_provider/src/: lib.rs
src/siwb/ic_siwb_provider/src/service/: get_address.rs  get_caller_address.rs  get_principal.rs  init_upgrade.rs  mod.rs  siwb_get_delegation.rs  siwb_login.rs  siwb_prepare_login.rs  types.rs
src/siwb/ic_siwb_provider/tests/: common.rs  integration_tests.rs
src/treasury/: main.mo
vera-backend/: package-lock.json  package.json  tsconfig.json
vera-backend/src/: docs.ts  index.ts  prompt.ts  types.ts
(+54 files in other folders)
