[package]
name = "ic_siwb_provider"
version = "0.0.1"
edition = "2021"
authors = ["ghostcorn <ghostcorn@astrox.network>"]
description = "Using the pre built ic_siwb_provider canister is the easiest way to integrate Bitcoin wallet authentication into an Internet Computer (ICP) application."
license = "MIT"
homepage = "https://github.com/AstroxNetwork/ic-siwb"
repository = "https://github.com/AstroxNetwork/ic-siwb"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.11"
ic-cdk = "0.11.3"
ic_siwb = { path = "../ic_siwb" }
ic-stable-structures = "0.6.0"
ic-certified-map = "0.4.0"
serde = "1.0.193"
serde_json = "1.0.108"
serde_bytes = "0.11"


[dev-dependencies]
ethers = "2.0.10"
hex = "0.4.3"
ic-agent = "0.29.0"
pocket-ic = "2.0.1"
siwe = "0.6"
rand = "0.8.4"
ring = "0.16.20"
